+ Added new element in section__1__container to make it not change width when typewriter animation is playing. ~ Changed section__1__container height to 65vh in an attempt to fix height: 75% not applying on iOS devices.

--- a/src/routes/scss/_section__1.scss
+++ b/src/routes/scss/_section__1.scss
@@ -26,7 +26,7 @@
 
     &__container {
         display: flex;
-        height: 75%;
+        height: 65vh;
         justify-content: center;
         flex-direction: column;
         text-align: center;
